# FinSight-AI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260530_0001_initial_schema.py  20260530_0002_constraints_and_indexes.py  20260530_0003_refresh_tokens.py  20260530_0004_pgvector_embeddings.py
backend/app/: __init__.py  main.py
backend/app/agents/: orchestrator.py  state.py  tools.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  chat.py  transactions.py  uploads.py
backend/app/core/: config.py  database.py  rate_limit.py  security.py
backend/app/models/: __init__.py  audit.py  chat.py  embedding.py  finance.py  user.py
backend/app/repositories/: transactions.py
backend/app/schemas/: auth.py  chat.py  finance.py
backend/app/services/: analytics.py  audit.py  categorization.py  ingestion.py  llm.py  rag.py
backend/tests/: test_analytics.py  test_auth.py  test_migrations.py  test_orchestrator.py  test_security_regressions.py
docs/: 00-delivery-index.md  01-requirements-analysis.md  02-architecture-review.md  03-agent-architecture.md  04-langgraph-design.md  05-ux-ui-design.md  06-production-roadmap.md  07-security-layer.md  08-testing-strategy.md  09-deployment.md  10-frontend-architecture.md  11-backend-architecture.md  12-database-design.md  13-devops-layer.md  14-reviewer-validation.md
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
(+17 files in other folders)
