[project]
name = "personal-finance-ai-backend"
version = "0.1.0"
description = "FastAPI backend for a multimodal personal finance AI assistant"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "bcrypt>=4.2.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.6",
  "langgraph>=0.2.60",
  "openai>=1.59.6",
  "pdfplumber>=0.11.5",
  "pillow>=11.1.0",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.7.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
